* update vue to v3 * update bootstrap to v5 * adjust code for vue3 and b5

--- a/apps/PasswordManager/i18n/en.json
+++ b/apps/PasswordManager/i18n/en.json
@@ -44,6 +44,7 @@
         "text": "You are about to visit an external link and we would like to pause for a moment out of an abundance of caution.",
         "text_info": "You are being redirected to",
         "copy": "Copy",
+        "copied": "Copied!",
         "proceed": "Proceed"
       }
     },
