--- a/apps/Login/i18n/en.json
+++ b/apps/Login/i18n/en.json
@@ -7,17 +7,21 @@
     "createNewAccountActionText": "Sign Up",
     "forgotPasswordText": "Forgot your password?",
     "forgotPasswordActionText": "Request",
-    "loginToApp": "Login to %s",
-    "sensitiveData": "Please do not input sensitive data as this the instance you are logging in is only for demonstration purposes!",
-    "deleteInfo": "The data submitted here will be deleted after 60 minutes.",
-    "adminUser": "Username: %s",
-    "adminPassword": "Password: %s",
+    "loginToApp": "Login to Keestash",
+    "adminUser": "Username: admin",
+    "adminPassword": "Password: admin",
     "demo": {
+      "sensitiveData": "Please do not input sensitive data as this the instance you are logging in is only for demonstration purposes!",
+      "deleteInfo": "The data submitted here will be deleted after 60 minutes.",
       "modal": {
-        "title": "Welcome to the the demonstration instance of %s!",
+        "title": "Welcome to the the demonstration instance of Keestash!",
         "alert": "Please provide a valid email address",
         "text": "We would like to keep you up to date with news about Keestash. Please input your email address in order to use the demo version.",
         "info": "With submitting your email address, you are agreeing with our <a href=\"{{ tncLink }}\" target=\"_blank\">Terms and Conditions</a>",
+        "input": {
+          "label": "Email Address",
+          "description": "Your email address will be used to inform you from time to time about Keestash"
+        },
         "sendButton": "Send",
         "loadingInfo": "Loading ..."
       }
