* add user specific language and locale

--- a/apps/Profile/i18n/en.json
+++ b/apps/Profile/i18n/en.json
@@ -1,1 +1,14 @@
-{}
+{
+  "settingsTitle": "Personal Settings",
+  "settings": {
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "email": "E-Mail",
+    "phone": "Phone",
+    "website": "Website",
+    "created": "Created",
+    "hash": "Hash",
+    "locale": "Locale",
+    "language": "Language"
+  }
+}
