--- a/apps/PasswordManager/i18n/en.json
+++ b/apps/PasswordManager/i18n/en.json
@@ -103,6 +103,7 @@
       "tooltip": "The password is shared to you by",
       "share": {
         "sharedDateTimeLabel": "Shared with User at ",
+        "emptySharesMessage": "No shared users",
         "modal": {
           "title": "Removing User",
           "content": "Do you really want to remove this user?",
@@ -112,6 +113,7 @@
       },
       "comment": {
         "commentDateTimeLabel": "Commented at ",
+        "emptyCommentsMessage": "No Comments here",
         "modal": {
           "title": "Removing Comment",
           "content": "Do you really want to remove this comment?",
@@ -121,6 +123,7 @@
       },
       "attachment": {
         "attachmentDateTimeLabel": "Attached at ",
+        "emptyAttachmentsMessage": "No attachments found",
         "fileUpload": {
           "message": "click here to upload or drag",
           "uploadingMessage": "Uploading {number} files...",
@@ -158,9 +161,7 @@
     "submitText": "Save",
     "negativeText": "Close",
     "noTitleAlertText": "Please provide a title",
-    "insertedAlertText": "New Folder created",
-    "number_of_passwords_in_folder_single": "1 password in this folder",
-    "number_of_passwords_in_folder_multiple": "{{number}} passwords in this folder"
+    "insertedAlertText": "New Folder created"
   },
   "remove": "remove",
   "actionBar": {
